k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskmanager-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: taskmanager-frontend
  template:
    metadata:
      labels:
        app: taskmanager-frontend
      annotations:
        deployment.kubernetes.io/revision: "2"
    spec:
      containers:
        - name: frontend
          image: taskmanager-frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: taskmanager-frontend-service
spec:
  selector:
    app: taskmanager-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
