k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taskmanager-db-service
spec:
  selector:
    app: taskmanager-db
  ports:
    - port: 5432
      targetPort: 5432
  type: ClusterIP
